# serdevmock

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PHPDEV.md  PLAN.md  README.md  check.ps1  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: QUICKSTART_WINDOWS.md  SOCKET_MODE.md  VIRTUAL_PORTS.md
examples/: at_command.json  at_command_socket.json  at_command_win.json  echo_mode.json  echo_mode_loopback.json  echo_mode_socket.json  echo_mode_virtual.json  echo_mode_win.json  test_socket_client.py
src/serdevmock/: __init__.py
src/serdevmock/cli/: __init__.py  main.py
src/serdevmock/protocols/: __init__.py
src/serdevmock/protocols/common/: __init__.py  interface.py
src/serdevmock/protocols/uart/: __init__.py  config.py  emulator.py
src/serdevmock/utils/: __init__.py  vport_checker.py
tests/test_cli/: __init__.py  test_main.py
tests/test_protocols/: __init__.py
tests/test_protocols/test_uart/: __init__.py  test_config.py  test_emulator.py
tests/test_utils/: __init__.py  test_vport_checker.py
