[project]
name = "serdevmock"
version = "0.1.0"
description = "シリアル通信デバイスモックツール - UART/SPI/I2C対応の軽量エミュレータ"
authors = [
    {name = "Shota Nishihara", email = "tomio2480@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["serial", "uart", "spi", "i2c", "mock", "emulator", "testing", "hardware"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: System :: Hardware",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/tomio2480/serdevmock"
Repository = "https://github.com/tomio2480/serdevmock"
Issues = "https://github.com/tomio2480/serdevmock/issues"
Changelog = "https://github.com/tomio2480/serdevmock/blob/main/CHANGELOG.md"


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
serdevmock = "serdevmock.cli.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/serdevmock --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
